<resources>
    <string name="app_name">PhoneConTime</string>
    <string name="prompt">提示</string>
    <string name="message">确定退出吗？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="delete_db">删除数据库</string>
    <string name="print_table1">输出数据表1</string>
    <string name="print_table2">输出数据表2</string>
    <string name="latest_ten_days">最近10天的状态</string>
    <string name="refresh">刷新</string>

    <string name="delete_or_not">确定删除数据库吗？</string>
    <string name="refresh_to_db">刷新到数据库</string>
</resources>
